# ScheduleGenerator

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: docs.yml
config/environments/: development.env  production.env  test.env
docs/: GLOSSARY.md  PROJECT_CHARTER.md  ROADMAP.md
docs/adr/: 0000-template.md  0001-repository-documentation.md  0002-versioned-json-datasets.md  0003-use-cp-sat-for-prototype.md  0004-use-sqlite-for-school-data.md  0005-use-persistent-generation-jobs.md  0006-use-local-web-interface.md  0007-use-linear-timetable-draft-history.md  0008-use-local-role-based-access-control.md  0009-use-process-local-observability.md  README.md
docs/api/: README.md
docs/constraints/: CATALOG.md  EXAMPLES.md  PRIORITIES.md  (+2 more)
examples/: small-school.json
schemas/: school-dataset.schema.json
scripts/: benchmark_solver.py  build_demo_dataset.py  build_import_template.mjs  build_publication_sample.py  check_constraint_coverage.py  check_docs.py  import_school_data.py  run_web_app.py  validate_dataset.py
tests/: scenario_factory.py  test_configuration_workbook.py  test_editing.py  test_generation_jobs.py  test_hard_constraints.py  test_operations.py  test_performance.py  test_properties.py  test_publication.py  test_security.py  test_soft_constraints.py  test_solver_prototype.py  test_storage_import.py  test_validate_dataset.py  test_web_app.py
(+48 files in other folders)
