[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-generator"
version = "0.9.1"
description = "School timetable generation and publication application"
requires-python = ">=3.11"
dependencies = [
  "jsonschema==4.26.0",
  "ortools==9.15.6755",
  "reportlab==4.4.9",
  "pypdf==6.10.0",
]

[project.scripts]
schedule-generator = "schedule_generator.cli:main"
schedule-generator-web = "schedule_generator.web:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
schedule_generator = ["web/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "F401"]
